--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
 	"name": "backend",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "server.js",
 	"scripts": {
-		"dev": "nodemon server.js",
-		"start": "node server.js"
+		"dev": "NODE_ENV=development nodemon backend/server.js",
+		"start": "NODE_ENV=production node backend/server.js",
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
 	},
 	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"aws-sdk": "^2.1483.0",
 		"bcryptjs": "^2.4.3",
 		"cloudinary": "^1.40.0",
 		"cookie-parser": "^1.4.6",
@@ -19,6 +21,7 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.4.0",
+		"multer": "^1.4.5-lts.1",
 		"socket.io": "^4.7.2"
 	},
 	"devDependencies": {
